--- a/index.html
+++ b/index.html
@@ -1330,7 +1330,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="col-md-4 product-men mt-5">
                                     <div class="men-pro-item simpleCart_shelfItem">
                                         <div class="men-thumb-item text-center">
-                                            <img src="images/m6.jpg" alt="">
+                                            <img src="m6.jpg" alt="">
                                             <div class="men-cart-pro">
                                                 <div class="inner-men-cart-pro">
                                                     <a href="single.html" class="link-product-add-cart">Quick View</a>
