--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col-md-3 logo_agile">
                     <h1 class="text-center">
                         <a href="index.html" class="font-weight-bold font-italic">
-                            <img src="images/logo2.png" alt=" " class="img-fluid">Electro Store
+                            <img src="logo2.png" alt=" " class="img-fluid">Electro Store
                         </a>
                     </h1>
                 </div>
