--- a/index.html
+++ b/index.html
@@ -1083,7 +1083,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="scroll">
                                     <div class="row">
                                         <div class="col-lg-3 col-sm-2 col-3 left-mar">
-                                            <img src="images/k1.jpg" alt="" class="img-fluid">
+                                            <img src="k1.jpg" alt="" class="img-fluid">
                                         </div>
                                         <div class="col-lg-9 col-sm-10 col-9 w3_mvd">
                                             <a href="">Samsung Galaxy On7 Prime (Gold, 4GB RAM + 64GB Memory)</a>
@@ -1092,7 +1092,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                     </div>
                                     <div class="row my-4">
                                         <div class="col-lg-3 col-sm-2 col-3 left-mar">
-                                            <img src="images/k2.jpg" alt="" class="img-fluid">
+                                            <img src="k2.jpg" alt="" class="img-fluid">
                                         </div>
                                         <div class="col-lg-9 col-sm-10 col-9 w3_mvd">
                                             <a href="">Haier 195 L 4 Star Direct-Cool Single Door Refrigerator</a>
@@ -1101,7 +1101,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                     </div>
                                     <div class="row">
                                         <div class="col-lg-3 col-sm-2 col-3 left-mar">
-                                            <img src="images/k3.jpg" alt="" class="img-fluid">
+                                            <img src="k3.jpg" alt="" class="img-fluid">
                                         </div>
                                         <div class="col-lg-9 col-sm-10 col-9 w3_mvd">
                                             <a href="">Ambrane 13000 mAh Power Bank (P-1310 Premium)</a>
@@ -1130,7 +1130,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="col-md-4 product-men mt-5">
                                     <div class="men-pro-item simpleCart_shelfItem">
                                         <div class="men-thumb-item text-center">
-                                            <img src="images/m1.jpg" alt="">
+                                            <img src="m1.jpg" alt="">
                                             <div class="men-cart-pro">
                                                 <div class="inner-men-cart-pro">
                                                     <a href="single.html" class="link-product-add-cart">Quick View</a>
@@ -1167,7 +1167,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="col-md-4 product-men mt-5">
                                     <div class="men-pro-item simpleCart_shelfItem">
                                         <div class="men-thumb-item text-center">
-                                            <img src="images/m2.jpg" alt="">
+                                            <img src="m2.jpg" alt="">
                                             <div class="men-cart-pro">
                                                 <div class="inner-men-cart-pro">
                                                     <a href="single.html" class="link-product-add-cart">Quick View</a>
@@ -1207,7 +1207,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="col-md-4 product-men mt-5">
                                     <div class="men-pro-item simpleCart_shelfItem">
                                         <div class="men-thumb-item text-center">
-                                            <img src="images/m3.jpg" alt="">
+                                            <img src="m3.jpg" alt="">
                                             <div class="men-cart-pro">
                                                 <div class="inner-men-cart-pro">
                                                     <a href="single.html" class="link-product-add-cart">Quick View</a>
@@ -1253,7 +1253,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="col-md-4 product-men mt-5">
                                     <div class="men-pro-item simpleCart_shelfItem">
                                         <div class="men-thumb-item text-center">
-                                            <img src="images/m4.jpg" alt="">
+                                            <img src="m4.jpg" alt="">
                                             <div class="men-cart-pro">
                                                 <div class="inner-men-cart-pro">
                                                     <a href="single.html" class="link-product-add-cart">Quick View</a>
@@ -1290,7 +1290,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="col-md-4 product-men mt-5">
                                     <div class="men-pro-item simpleCart_shelfItem">
                                         <div class="men-thumb-item text-center">
-                                            <img src="images/m5.jpg" alt="">
+                                            <img src="m5.jpg" alt="">
                                             <div class="men-cart-pro">
                                                 <div class="inner-men-cart-pro">
                                                     <a href="single.html" class="link-product-add-cart">Quick View</a>
@@ -1373,7 +1373,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <h3 class="col-md-4 effect-bg">Summer Carnival</h3>
                                 <p class="w3l-nut-middle">Get Extra 10% Off</p>
                                 <div class="col-md-8 bg-right-nut">
-                                    <img src="images/image1.png" alt="">
+                                    <img src="image1.png" alt="">
                                 </div>
                             </div>
                         </div> -->
@@ -1383,7 +1383,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="col-md-4 product-men mt-5">
                                     <div class="men-pro-item simpleCart_shelfItem">
                                         <div class="men-thumb-item text-center">
-                                            <img src="images/m7.jpg" alt="">
+                                            <img src="m7.jpg" alt="">
                                             <div class="men-cart-pro">
                                                 <div class="inner-men-cart-pro">
                                                     <a href="single.html" class="link-product-add-cart">Quick View</a>
@@ -1422,7 +1422,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="col-md-4 product-men mt-5">
                                     <div class="men-pro-item simpleCart_shelfItem">
                                         <div class="men-thumb-item text-center">
-                                            <img src="images/m8.jpg" alt="">
+                                            <img src="m8.jpg" alt="">
                                             <div class="men-cart-pro">
                                                 <div class="inner-men-cart-pro">
                                                     <a href="single.html" class="link-product-add-cart">Quick View</a>
@@ -1460,7 +1460,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="col-md-4 product-men mt-5">
                                     <div class="men-pro-item simpleCart_shelfItem">
                                         <div class="men-thumb-item text-center">
-                                            <img src="images/m9.jpg" alt="">
+                                            <img src="m9.jpg" alt="">
                                             <div class="men-cart-pro">
                                                 <div class="inner-men-cart-pro">
                                                     <a href="single.html" class="link-product-add-cart">Quick View</a>
@@ -1504,7 +1504,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <h3 class="col-md-4 effect-bg">Summer Carnival</h3>
                                 <p class="w3l-nut-middle">Get Extra 10% Off</p>
                                 <div class="col-md-8 bg-right-nut">
-                                    <img src="images/image1.png" alt="">
+                                    <img src="image1.png" alt="">
                                 </div>
                             </div>
                         </div>
@@ -1562,7 +1562,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <p>Sale up to 25% off all in store</p>
                             </div>
                             <div class="col-sm-5 offerimg-w3l">
-                                <img src="images/off1.png" alt="" class="img-fluid">
+                                <img src="off1.png" alt="" class="img-fluid">
                             </div>
                         </div>
                     </div>
@@ -1576,7 +1576,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <p>Free shipping order over $100</p>
                             </div>
                             <div class="col-sm-5 offerimg-w3l">
-                                <img src="images/off2.png" alt="" class="img-fluid">
+                                <img src="off2.png" alt="" class="img-fluid">
                             </div>
                         </div>
                     </div>
