--- a/index.html
+++ b/index.html
@@ -1766,7 +1766,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
     <!-- js-files -->
     <!-- jquery -->
-    <script src="js/jquery-2.2.3.min.js"></script>
+    <script src="jquery-2.2.3.min.js"></script>
     <!-- //jquery -->
 
     <!-- nav smooth scroll -->
@@ -1787,7 +1787,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //nav smooth scroll -->
 
     <!-- popup modal (for location)-->
-    <script src="js/jquery.magnific-popup.js"></script>
+    <script src="jquery.magnific-popup.js"></script>
     <script>
         $(document).ready(function() {
             $('.popup-with-zoom-anim').magnificPopup({
@@ -1807,7 +1807,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //popup modal (for location)-->
 
     <!-- cart-js -->
-    <script src="js/minicart.js"></script>
+    <script src="minicart.js"></script>
     <script>
         paypals.minicarts.render(); //use only unique class names other than paypals.minicarts.Also Replace same class name in css and minicart.min.js
 
@@ -1850,16 +1850,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //password-script -->
 
     <!-- scroll seller -->
-    <script src="js/scroll.js"></script>
+    <script src="scroll.js"></script>
     <!-- //scroll seller -->
 
     <!-- smoothscroll -->
-    <script src="js/SmoothScroll.min.js"></script>
+    <script src="SmoothScroll.min.js"></script>
     <!-- //smoothscroll -->
 
     <!-- start-smooth-scrolling -->
-    <script src="js/move-top.js"></script>
-    <script src="js/easing.js"></script>
+    <script src="move-top.js"></script>
+    <script src="easing.js"></script>
     <script>
         jQuery(document).ready(function($) {
             $(".scroll").click(function(event) {
@@ -1893,7 +1893,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //smooth-scrolling-of-move-up -->
 
     <!-- for bootstrap working -->
-    <script src="js/bootstrap.js"></script>
+    <script src="bootstrap.js"></script>
     <!-- //for bootstrap working -->
     <!-- //js-files -->
 </body>
