--- a/product.html
+++ b/product.html
@@ -26,15 +26,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //Meta tag Keywords -->
 
     <!-- Custom-Files -->
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <!-- Bootstrap css -->
-    <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="style.css" rel="stylesheet" type="text/css" media="all" />
     <!-- Main css -->
-    <link rel="stylesheet" href="css/fontawesome-all.css">
+    <link rel="stylesheet" href="fontawesome-all.css">
     <!-- Font-Awesome-Icons-CSS -->
-    <link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="popuo-box.css" rel="stylesheet" type="text/css" media="all" />
     <!-- pop-up-box -->
-    <link href="css/menu.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="menu.css" rel="stylesheet" type="text/css" media="all" />
     <!-- menu style -->
     <!-- //Custom-Files -->
 
@@ -872,7 +872,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="col-md-4 product-men mt-md-0 mt-5">
                                     <div class="men-pro-item simpleCart_shelfItem">
                                         <div class="men-thumb-item text-center">
-                                            <img src="images/m2.jpg" alt="">
+                                            <img src="m2.jpg" alt="">
                                             <div class="men-cart-pro">
                                                 <div class="inner-men-cart-pro">
                                                     <a href="single.html" class="link-product-add-cart">Quick View</a>
@@ -912,7 +912,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="col-md-4 product-men mt-md-0 mt-5">
                                     <div class="men-pro-item simpleCart_shelfItem">
                                         <div class="men-thumb-item text-center">
-                                            <img src="images/m3.jpg" alt="">
+                                            <img src="m3.jpg" alt="">
                                             <div class="men-cart-pro">
                                                 <div class="inner-men-cart-pro">
                                                     <a href="single.html" class="link-product-add-cart">Quick View</a>
@@ -957,7 +957,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="col-md-4 product-men">
                                     <div class="men-pro-item simpleCart_shelfItem">
                                         <div class="men-thumb-item text-center">
-                                            <img src="images/mk1.jpg" alt="">
+                                            <img src="mk1.jpg" alt="">
                                             <div class="men-cart-pro">
                                                 <div class="inner-men-cart-pro">
                                                     <a href="single.html" class="link-product-add-cart">Quick View</a>
@@ -996,7 +996,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="col-md-4 product-men mt-md-0 mt-5">
                                     <div class="men-pro-item simpleCart_shelfItem">
                                         <div class="men-thumb-item text-center">
-                                            <img src="images/mk2.jpg" alt="">
+                                            <img src="mk2.jpg" alt="">
                                             <div class="men-cart-pro">
                                                 <div class="inner-men-cart-pro">
                                                     <a href="single.html" class="link-product-add-cart">Quick View</a>
@@ -1035,7 +1035,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="col-md-4 product-men mt-md-0 mt-5">
                                     <div class="men-pro-item simpleCart_shelfItem">
                                         <div class="men-thumb-item text-center">
-                                            <img src="images/mk3.jpg" alt="">
+                                            <img src="mk3.jpg" alt="">
                                             <div class="men-cart-pro">
                                                 <div class="inner-men-cart-pro">
                                                     <a href="single.html" class="link-product-add-cart">Quick View</a>
@@ -1079,7 +1079,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="col-md-4 product-men">
                                     <div class="men-pro-item simpleCart_shelfItem">
                                         <div class="men-thumb-item text-center">
-                                            <img src="images/mk4.jpg" alt="" class="img-fluid">
+                                            <img src="mk4.jpg" alt="" class="img-fluid">
                                             <div class="men-cart-pro">
                                                 <div class="inner-men-cart-pro">
                                                     <a href="single.html" class="link-product-add-cart">Quick View</a>
@@ -1117,7 +1117,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="col-md-4 product-men mt-md-0 mt-5 mt-5">
                                     <div class="men-pro-item simpleCart_shelfItem">
                                         <div class="men-thumb-item text-center">
-                                            <img src="images/mk5.jpg" alt="" class="img-fluid">
+                                            <img src="mk5.jpg" alt="" class="img-fluid">
                                             <div class="men-cart-pro">
                                                 <div class="inner-men-cart-pro">
                                                     <a href="single.html" class="link-product-add-cart">Quick View</a>
@@ -1155,7 +1155,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="col-md-4 product-men mt-md-0 mt-5 mt-5">
                                     <div class="men-pro-item simpleCart_shelfItem">
                                         <div class="men-thumb-item text-center">
-                                            <img src="images/mk6.jpg" alt="" class="img-fluid">
+                                            <img src="mk6.jpg" alt="" class="img-fluid">
                                             <div class="men-cart-pro">
                                                 <div class="inner-men-cart-pro">
                                                     <a href="single.html" class="link-product-add-cart">Quick View</a>
@@ -1198,7 +1198,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="col-md-4 product-men">
                                     <div class="men-pro-item simpleCart_shelfItem">
                                         <div class="men-thumb-item text-center">
-                                            <img src="images/mk7.jpg" alt="" class="img-fluid">
+                                            <img src="mk7.jpg" alt="" class="img-fluid">
                                             <div class="men-cart-pro">
                                                 <div class="inner-men-cart-pro">
                                                     <a href="single.html" class="link-product-add-cart">Quick View</a>
@@ -1237,7 +1237,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="col-md-4 product-men mt-md-0 mt-5 mt-5">
                                     <div class="men-pro-item simpleCart_shelfItem">
                                         <div class="men-thumb-item text-center">
-                                            <img src="images/mk8.jpg" alt="" class="img-fluid">
+                                            <img src="mk8.jpg" alt="" class="img-fluid">
                                             <div class="men-cart-pro">
                                                 <div class="inner-men-cart-pro">
                                                     <a href="single.html" class="link-product-add-cart">Quick View</a>
@@ -1275,7 +1275,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <div class="col-md-4 product-men mt-md-0 mt-5 mt-5">
                                     <div class="men-pro-item simpleCart_shelfItem">
                                         <div class="men-thumb-item text-center">
-                                            <img src="images/mk9.jpg" alt="" class="img-fluid">
+                                            <img src="mk9.jpg" alt="" class="img-fluid">
                                             <div class="men-cart-pro">
                                                 <div class="inner-men-cart-pro">
                                                     <a href="single.html" class="link-product-add-cart">Quick View</a>
@@ -1545,7 +1545,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <p>Sale up to 25% off all in store</p>
                             </div>
                             <div class="col-sm-5 offerimg-w3l">
-                                <img src="images/off1.png" alt="" class="img-fluid">
+                                <img src="off1.png" alt="" class="img-fluid">
                             </div>
                         </div>
                     </div>
@@ -1559,7 +1559,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <p>Free shipping order over $100</p>
                             </div>
                             <div class="col-sm-5 offerimg-w3l">
-                                <img src="images/off2.png" alt="" class="img-fluid">
+                                <img src="off2.png" alt="" class="img-fluid">
                             </div>
                         </div>
                     </div>
@@ -1770,7 +1770,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //nav smooth scroll -->
 
     <!-- popup modal (for location)-->
-    <script src="js/jquery.magnific-popup.js"></script>
+    <script src="jquery.magnific-popup.js"></script>
     <script>
         $(document).ready(function() {
             $('.popup-with-zoom-anim').magnificPopup({
@@ -1790,7 +1790,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //popup modal (for location)-->
 
     <!-- cart-js -->
-    <script src="js/minicart.js"></script>
+    <script src="minicart.js"></script>
     <script>
         paypals.minicarts.render(); //use only unique class names other than paypals.minicarts.Also Replace same class name in css and minicart.min.js
 
@@ -1833,12 +1833,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //password-script -->
 
     <!-- smoothscroll -->
-    <script src="js/SmoothScroll.min.js"></script>
+    <script src="SmoothScroll.min.js"></script>
     <!-- //smoothscroll -->
 
     <!-- start-smooth-scrolling -->
-    <script src="js/move-top.js"></script>
-    <script src="js/easing.js"></script>
+    <script src="move-top.js"></script>
+    <script src="easing.js"></script>
     <script>
         jQuery(document).ready(function($) {
             $(".scroll").click(function(event) {
@@ -1872,7 +1872,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //smooth-scrolling-of-move-up -->
 
     <!-- for bootstrap working -->
-    <script src="js/bootstrap.js"></script>
+    <script src="bootstrap.js"></script>
     <!-- //for bootstrap working -->
     <!-- //js-files -->
 
