--- a/about.html
+++ b/about.html
@@ -1,9 +1,4 @@
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
+
 <!DOCTYPE html>
 <html lang="zxx">
 
@@ -26,15 +21,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //Meta tag Keywords -->
 
     <!-- Custom-Files -->
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <!-- Bootstrap css -->
-    <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="style.css" rel="stylesheet" type="text/css" media="all" />
     <!-- Main css -->
-    <link rel="stylesheet" href="css/fontawesome-all.css">
+    <link rel="stylesheet" href="fontawesome-all.css">
     <!-- Font-Awesome-Icons-CSS -->
-    <link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="popuo-box.css" rel="stylesheet" type="text/css" media="all" />
     <!-- pop-up-box -->
-    <link href="css/menu.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="menu.css" rel="stylesheet" type="text/css" media="all" />
     <!-- menu style -->
     <!-- //Custom-Files -->
 
@@ -555,7 +550,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col-md-3 logo_agile">
                     <h1 class="text-center">
                         <a href="index.html" class="font-weight-bold font-italic">
-                            <img src="images/logo2.png" alt=" " class="img-fluid">Electro Store
+                            <img src="logo2.png" alt=" " class="img-fluid">Electro Store
                         </a>
                     </h1>
                 </div>
@@ -831,7 +826,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse porta erat sit amet eros sagittis, quis hendrerit libero aliquam. Fusce semper augue ac dolor efficitur, a pretium metus pellentesque.</p>
                 </div>
                 <div class="col-lg-6 welcome-right-top mt-lg-0 mt-sm-5 mt-4">
-                    <img src="images/ab.jpg" class="img-fluid" alt=" ">
+                    <img src="ab.jpg" class="img-fluid" alt=" ">
                 </div>
             </div>
         </div>
@@ -868,7 +863,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     </div>
                     <div class="row med-testi-left my-5">
                         <div class="col-lg-2 col-3 w3ls-med-testi-img">
-                            <img src="images/user.jpg" alt=" " class="img-fluid rounded-circle" />
+                            <img src="user.jpg" alt=" " class="img-fluid rounded-circle" />
                         </div>
                         <div class="col-lg-10 col-9 med-testi-txt">
                             <h4 class="font-weight-bold mb-lg-1 mb-2">Alejandra</h4>
@@ -1089,7 +1084,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
     <!-- js-files -->
     <!-- jquery -->
-    <script src="js/jquery-2.2.3.min.js"></script>
+    <script src="jquery-2.2.3.min.js"></script>
     <!-- //jquery -->
 
     <!-- nav smooth scroll -->
@@ -1110,7 +1105,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //nav smooth scroll -->
 
     <!-- popup modal (for location)-->
-    <script src="js/jquery.magnific-popup.js"></script>
+    <script src="jquery.magnific-popup.js"></script>
     <script>
         $(document).ready(function() {
             $('.popup-with-zoom-anim').magnificPopup({
@@ -1130,7 +1125,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //popup modal (for location)-->
 
     <!-- cart-js -->
-    <script src="js/minicart.js"></script>
+    <script src="minicart.js"></script>
     <script>
         paypals.minicarts.render(); //use only unique class names other than paypals.minicarts.Also Replace same class name in css and minicart.min.js
 
@@ -1173,12 +1168,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //password-script -->
 
     <!-- smoothscroll -->
-    <script src="js/SmoothScroll.min.js"></script>
+    <script src="SmoothScroll.min.js"></script>
     <!-- //smoothscroll -->
 
     <!-- start-smooth-scrolling -->
-    <script src="js/move-top.js"></script>
-    <script src="js/easing.js"></script>
+    <script src="move-top.js"></script>
+    <script src="easing.js"></script>
     <script>
         jQuery(document).ready(function($) {
             $(".scroll").click(function(event) {
@@ -1212,7 +1207,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //smooth-scrolling-of-move-up -->
 
     <!-- for bootstrap working -->
-    <script src="js/bootstrap.js"></script>
+    <script src="bootstrap.js"></script>
     <!-- //for bootstrap working -->
     <!-- //js-files -->
 
