--- a/checkimei.html
+++ b/checkimei.html
@@ -26,15 +26,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //Meta tag Keywords -->
 
     <!-- Custom-Files -->
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <!-- Bootstrap css -->
-    <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="style.css" rel="stylesheet" type="text/css" media="all" />
     <!-- Main css -->
-    <link rel="stylesheet" href="css/fontawesome-all.css">
+    <link rel="stylesheet" href="fontawesome-all.css">
     <!-- Font-Awesome-Icons-CSS -->
-    <link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="popuo-box.css" rel="stylesheet" type="text/css" media="all" />
     <!-- pop-up-box -->
-    <link href="css/menu.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="menu.css" rel="stylesheet" type="text/css" media="all" />
     <!-- menu style -->
     <!-- //Custom-Files -->
 
@@ -555,7 +555,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col-md-3 logo_agile">
                     <h1 class="text-center">
                         <a href="index.html" class="font-weight-bold font-italic">
-                            <img src="images/logo2.png" alt=" " class="img-fluid">Electro Store
+                            <img src="logo2.png" alt=" " class="img-fluid">Electro Store
                         </a>
                     </h1>
                 </div>
@@ -619,14 +619,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <li class="nav-item mr-lg-2 mb-lg-0 mb-2">
                             <a class="nav-link" href="index.html">Home
 								<span class="sr-only">(current)</span>
-							</a>
+							</a> 
                         </li>
                         <li class="nav-item dropdown mr-lg-2 mb-lg-0 mb-2">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 								Phones
 							</a>
                             <div class="dropdown-menu">
-                                <div class="agile_inner_drop_nav_info p-4">
+                                <div crelass="agile_inner_drop_nav_info p-4">
                                     <h5 class="mb-3">Mobiles, Computers</h5>
                                     <div class="row">
                                         <div class="col-sm-6 multi-gd-img">
@@ -912,7 +912,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <p>Sale up to 25% off all in store</p>
                             </div>
                             <div class="col-sm-5 offerimg-w3l">
-                                <img src="images/off1.png" alt="" class="img-fluid">
+                                <img src="off1.png" alt="" class="img-fluid">
                             </div>
                         </div>
                     </div>
@@ -926,7 +926,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <p>Free shipping order over $100</p>
                             </div>
                             <div class="col-sm-5 offerimg-w3l">
-                                <img src="images/off2.png" alt="" class="img-fluid">
+                                <img src="off2.png" alt="" class="img-fluid">
                             </div>
                         </div>
                     </div>
@@ -1116,7 +1116,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
     <!-- js-files -->
     <!-- jquery -->
-    <script src="js/jquery-2.2.3.min.js"></script>
+    <script src="jquery-2.2.3.min.js"></script>
     <!-- //jquery -->
 
     <!-- nav smooth scroll -->
@@ -1137,7 +1137,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //nav smooth scroll -->
 
     <!-- popup modal (for location)-->
-    <script src="js/jquery.magnific-popup.js"></script>
+    <script src="jquery.magnific-popup.js"></script>
     <script>
         $(document).ready(function() {
             $('.popup-with-zoom-anim').magnificPopup({
@@ -1157,7 +1157,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //popup modal (for location)-->
 
     <!-- cart-js -->
-    <script src="js/minicart.js"></script>
+    <script src="minicart.js"></script>
     <script>
         paypals.minicarts.render(); //use only unique class names other than paypals.minicarts.Also Replace same class name in css and minicart.min.js
 
@@ -1200,12 +1200,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //password-script -->
 
     <!-- smoothscroll -->
-    <script src="js/SmoothScroll.min.js"></script>
+    <script src="SmoothScroll.min.js"></script>
     <!-- //smoothscroll -->
 
     <!-- start-smooth-scrolling -->
-    <script src="js/move-top.js"></script>
-    <script src="js/easing.js"></script>
+    <script src="move-top.js"></script>
+    <script src="easing.js"></script>
     <script>
         jQuery(document).ready(function($) {
             $(".scroll").click(function(event) {
@@ -1239,7 +1239,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //smooth-scrolling-of-move-up -->
 
     <!-- for bootstrap working -->
-    <script src="js/bootstrap.js"></script>
+    <script src="bootstrap.js"></script>
     <!-- //for bootstrap working -->
     <!-- //js-files -->
 
