--- a/contact.html
+++ b/contact.html
@@ -26,15 +26,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //Meta tag Keywords -->
 
     <!-- Custom-Files -->
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <!-- Bootstrap css -->
-    <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="style.css" rel="stylesheet" type="text/css" media="all" />
     <!-- Main css -->
-    <link rel="stylesheet" href="css/fontawesome-all.css">
+    <link rel="stylesheet" href="fontawesome-all.css">
     <!-- Font-Awesome-Icons-CSS -->
-    <link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="popuo-box.css" rel="stylesheet" type="text/css" media="all" />
     <!-- pop-up-box -->
-    <link href="css/menu.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="menu.css" rel="stylesheet" type="text/css" media="all" />
     <!-- menu style -->
     <!-- //Custom-Files -->
 
@@ -555,7 +555,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col-md-3 logo_agile">
                     <h1 class="text-center">
                         <a href="index.html" class="font-weight-bold font-italic">
-                            <img src="images/logo2.png" alt=" " class="img-fluid">Electro Store
+                            <img src="logo2.png" alt=" " class="img-fluid">Electro Store
                         </a>
                     </h1>
                 </div>
@@ -909,7 +909,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <p>Sale up to 25% off all in store</p>
                             </div>
                             <div class="col-sm-5 offerimg-w3l">
-                                <img src="images/off1.png" alt="" class="img-fluid">
+                                <img src="off1.png" alt="" class="img-fluid">
                             </div>
                         </div>
                     </div>
@@ -923,7 +923,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <p>Free shipping order over $100</p>
                             </div>
                             <div class="col-sm-5 offerimg-w3l">
-                                <img src="images/off2.png" alt="" class="img-fluid">
+                                <img src="off2.png" alt="" class="img-fluid">
                             </div>
                         </div>
                     </div>
@@ -1113,7 +1113,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
     <!-- js-files -->
     <!-- jquery -->
-    <script src="js/jquery-2.2.3.min.js"></script>
+    <script src="jquery-2.2.3.min.js"></script>
     <!-- //jquery -->
 
     <!-- nav smooth scroll -->
@@ -1134,7 +1134,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //nav smooth scroll -->
 
     <!-- popup modal (for location)-->
-    <script src="js/jquery.magnific-popup.js"></script>
+    <script src="jquery.magnific-popup.js"></script>
     <script>
         $(document).ready(function() {
             $('.popup-with-zoom-anim').magnificPopup({
@@ -1154,7 +1154,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //popup modal (for location)-->
 
     <!-- cart-js -->
-    <script src="js/minicart.js"></script>
+    <script src="minicart.js"></script>
     <script>
         paypals.minicarts.render(); //use only unique class names other than paypals.minicarts.Also Replace same class name in css and minicart.min.js
 
@@ -1197,12 +1197,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //password-script -->
 
     <!-- smoothscroll -->
-    <script src="js/SmoothScroll.min.js"></script>
+    <script src="SmoothScroll.min.js"></script>
     <!-- //smoothscroll -->
 
     <!-- start-smooth-scrolling -->
-    <script src="js/move-top.js"></script>
-    <script src="js/easing.js"></script>
+    <script src="move-top.js"></script>
+    <script src="easing.js"></script>
     <script>
         jQuery(document).ready(function($) {
             $(".scroll").click(function(event) {
@@ -1236,7 +1236,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- //smooth-scrolling-of-move-up -->
 
     <!-- for bootstrap working -->
-    <script src="js/bootstrap.js"></script>
+    <script src="bootstrap.js"></script>
     <!-- //for bootstrap working -->
     <!-- //js-files -->
 
